bug 713792 - stop QueryInterface()ing to nsIAccessible image internally r=tbsaunde